syntax = "proto3";

package task;

service TaskGRPCService {
  rpc FindOne (FindTaskById) returns (Task);
  rpc FindMany (FindTasks) returns (TaskList);
}

message FindTaskById {
  int32 id = 1;
}

message FindTasks {
  string title = 1;
}

message Task {
  int32 id = 1;
  string taskTitle = 2;
  string taskDescription = 3;
  bool isDeleted = 4;
  string assignUserId = 5;
}

message TaskList {
  repeated Task tasks = 1;
}