syntax = "proto3";

package user;

service UserGRPCService {
  rpc FindOne (UserId) returns (User);
  rpc FindMany (UserInfo) returns (Users);
  rpc Create (RegisterDto) returns (User);
}

message Users {
  repeated User users = 1;
}

message RegisterDto {
  string fullname = 1;
  string email = 2;
  string password = 3;
}

message UserId {
  string id = 1;
}

message UserInfo {
  string fullname = 1;
  string email = 2;
}

message User {
  string id = 1;
  string fullname = 2;
  string email = 3;
  string password = 4;
  string avatar = 5;
  string refresh_token = 6;
  bool deleted_at = 7;
  string created_at = 8;
  string updated_at = 9;
}